@@ -1,6 +1,14 @@
 v3.6.13 (XXXX-XX-XX)
 --------------------
 
+* When using connections to multiple endpoints and switching between them,
+  arangosh can now reuse existing connections by referring to an internal
+  connection cache. This helps for arangosh scripts that repeatedly connect
+  to multiple endpoints, and avoids wasting lots of ephemeral TCP ports
+  remaining in CLOSE_WAIT state.
+  This change is transparent to any arangosh scripts or commands that do not
+  reconnect to other endpoints than the one specified at arangosh start.
+
 * Put Sync/LatestID into hotbackup and restore it on hotbackup restore if it is
   in the backup. This helps with unique key generation after a hotbackup is
   restored to a young cluster.
